feat: 增加现场修改调试模式
